jumping of div solved. cleaner and fewer useless styles and dimensions. that waseasier than i thought

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -164,7 +164,7 @@ body {
   outline: 0px solid transparent;
 }
 
-.inherited-attributes {
+.inherited-attribute {
   opacity: 0.7;
 }
 
